🐛 fix: table caption spacing for safari
center selects labels a bit better

--- a/inputs.css
+++ b/inputs.css
@@ -51,7 +51,6 @@ label:has(input[type="checkbox"]) {
 
 label select {
 	flex-grow: 1;
-	margin: 0;
 }
 
 input {
@@ -325,6 +324,7 @@ select {
 	border-color: var(--shadow);
 
 	background-color: var(--shell);
+	background-image: none;
 	color: inherit;
 
 	padding: .1em;
